--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Rishi Kothari, developer</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Rishi Kothari!</h1>
-				<p>I'm best known as the guy with really messy hair in grade 6.</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:rishiosaur@gmail.com">email</a></li>
-        		<li><a href="https://github.com/684386">github.com/684386</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Rishi Kothari, Developer
+---
+<div class="blurb">
+	<h1>Hi there, I'm Rishi Kothari!</h1>
+	<p>I'm best known as the guy who had really messy hair in grade 6.</p>
+</div><!-- /.blurb -->
