--- a/cv/index.html
+++ b/cv/index.html
@@ -6,7 +6,7 @@ title: My CV
 		<a href="#" class="download" title="Download CV as .docx">Download CV</a>
 					<h1>Rishi Kothari</h1>
 					<address>
-					<strong>Affiliation</strong><br>
+					<strong>Developer</strong><br>
 					Street Address<br>
 					City State 12345<br>
 					<abbr title="phone">P:</abbr> (289) - 541 - 9936<br>
