--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@ title: Rishi Kothari, Developer
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Rishi Kothari!</h1>
-	<p>I'm best known as the guy who had really messy hair in grade 6. Read more about me <a href="about/">here</a>.</p><br>
-	<p>
+	<p>I'm best known as the guy who had really messy hair in grade 6. Read more about me <a href="about/">here</a>.</p>
 		Want to hire me? Look <a href="cv/">here</a>
 	</p>
 </div><!-- /.blurb -->
