--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@ title: About Me
   <p>First things first: I am a <strong>human</strong>. I may seem like a robot at first sight, but I assure you, I am a <em>Homo Sapien</em>. Although, if I were a robot, that would be cool... Oh well.</p>
 	<p>At the moment, I live in Canada (You will never find out where I live! Or maybe you will...) with my mom and dad, because I am still 11 years old. My pet is my MacBook Air, which I do everything on.</p>
 	<p>
-		I have went through bullying for 5 years, which is the primary reason why I changed schools <em>again</em>, so that I wouldn't have to deal with bullies, though I still have flashbacks at times.
+		I went through bullying for 5 years, which is the primary reason why I changed schools <em>again</em>, so that I wouldn't have to deal with bullies, though I still have flashbacks at times.
 	</p>
 	<p>
 		I am currently developing an AI for Windows, macOS and Linux with Atom, and you can view it <a href="http://github.com/684386/Microphon">here</a>.
@@ -15,5 +15,5 @@ title: About Me
 		I am also working on <a href="http://github.com/684386/Rectangel.css">Rectangel</a>, a fully class-based CSS library which has customizeable responsiveness and many other things which I can't explain right now.
 	</p>
 	<p>
-		That was a not-so-brief explanation of MEEEE!!!!!!! ⌣_⌣
+		That was a not-so-brief explanation of MEEEE!!!!!!!
 	</p>
