--- a/about/index.html
+++ b/about/index.html
@@ -9,10 +9,13 @@ title: About Me
 		I went through bullying for 5 years, which is the primary reason why I changed schools <em>again</em>, so that I wouldn't have to deal with bullies, though I still have flashbacks at times.
 	</p>
 	<p>
-		I am currently developing an AI for Windows, macOS and Linux with Atom, and you can view it <a href="http://github.com/684386/Microphon">here</a>.
+		I am currently developing an AI for Windows, macOS and Linux with Atom, and you can view it <a href="http://github.com/rishiosaur/Microphon">here</a>.
 	</p>
 	<p>
-		I am also working on <a href="http://github.com/684386/Rectangel.css">Rectangel</a>, a fully class-based CSS library which has customizeable responsiveness and many other things which I can't explain right now.
+		I am also working on <a href="http://github.com/rishiosaur/Rectangel.css">Rectangel</a>, a fully class-based CSS library which has customizeable responsiveness and many other things which I can't explain right now.
+	</p>
+	<p>
+		I'm usually referred to as "that one guy who codes"(Although)
 	</p>
 	<p>
 		That was a not-so-brief explanation of MEEEE!!!!!!!
