--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Rishi Kothari, Developer
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Rishi Kothari!</h1>
+	<h1>$iam -rishi kothari.</h1>
 	<p>I'm best known as the guy who had really messy hair in grade 6. Read more about me <a href="about/">here</a><br>
 		Want to hire me? Look <a href="cv/">here</a>
 	</p>
