--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: About Me
+title: about me.
 ---
 	<h1>{{ page.title }}</h1>
   <p>First things first: I am a <strong>human</strong>. I may seem like a robot at first sight, but I assure you, I am a <em>Homo Sapien</em>. Although, if I were a robot, that would be cool... Oh well.</p>
@@ -15,7 +15,7 @@ title: About Me
 		I am also working on <a href="http://github.com/rishiosaur/Rectangel.css">Rectangel</a>, a fully class-based CSS library which has customizeable responsiveness and many other things which I can't explain right now.
 	</p>
 	<p>
-		I'm usually referred to as "that one guy who codes"(Although)
+		I'm usually referred to as "that one guy who codes"(Although that isn't so bad.)
 	</p>
 	<p>
 		That was a not-so-brief explanation of MEEEE!!!!!!!
