--- a/cv/index.html
+++ b/cv/index.html
@@ -3,7 +3,7 @@ layout: default
 title: My CV
 ---
 	<div class="cv">
-		<a href="#" class="download" title="Download CV as .docx">Download CV</a>
+		<a href="#" class="download btnlink" title="Download CV as .docx">download.</a>
 					<h1>Rishi Kothari</h1>
 					<address>
 					<strong>Developer</strong><br>
