--- a/about/index.html
+++ b/about/index.html
@@ -1,10 +1,11 @@
 ---
 layout: default
 title: about me.
+subtitle1: design.
 ---
 	<h1>{{ page.title }}</h1>
   <p>First things first: I am a <strong>human</strong>. I may seem like a robot at first sight, but I assure you, I am a <em>Homo Sapien</em>. Although, if I were a robot, that would be cool... Oh well.</p>
-	<p>At the moment, I live in Canada (You will never find out where I live! Or maybe you will...) with my mom and dad, because I am still 11 years old. My pet is my MacBook Air, which I do everything on.</p>
+	<p>At the moment, I live in Canada (You will never find out where I live! Or maybe you will...) with my mom and dad, because I am still [sigh] 11 years old. My pet is my MacBook Air, which I do everything on.</p>
 	<p>
 		I went through bullying for 5 years, which is the primary reason why I changed schools <em>again</em>, so that I wouldn't have to deal with bullies, though I still have flashbacks at times.
 	</p>
@@ -17,6 +18,6 @@ title: about me.
 	<p>
 		I'm usually referred to as "that one guy who codes"(Although that isn't so bad.)
 	</p>
-	<p>
-		That was a not-so-brief explanation of MEEEE!!!!!!!
-	</p>
+	<h3>{{ page.subtitle1 }}</h3>
+	<p>To be honest, I am a fanatic when it comes to design. For me, that isn't really a weakness.</p>
+	<p>Anyways, that was a sort-of brief explanation about the Rishi, the last <em>nerdus maximus</em>.</p>
