--- a/podcast/index.html
+++ b/podcast/index.html
@@ -5,9 +5,4 @@ title: Mergers & Acquisitions
 
 <h1>{{page.title}}</h1>
 <p>This podcast is just like any other: where I say stuff that interest me, and might interest you.</p>
-
-<ul class="posts">
-  {% for posts-podcast in site.posts-podcast %}
-    <li><span class="meta"><strong>{{ posts-podcast.date | date_to_string }}</strong></span> | <a href="{{ posts-podcast.url }}" title="{{ posts-podcast.title }}" class="postlink">{{ posts-podcast.title }}</a></li>
-  {%endfor%}
-</ul>
+<p>It's mostly science and technology, but there is some other stuff in there, like other podcasts that I listen to, and mini-episodes (sometimes about the weather).</p>
