--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@ title: about me.
 		I went through bullying for 5 years, which is the primary reason why I changed schools <em>again</em>, so that I wouldn't have to deal with bullies, though I still have flashbacks at times.
 	</p>
 	<p>
-		I am also working on <a href="http://github.com/rishiosaur/Rectangel.css">Rectangel</a>, a fully class-based CSS library which has customizeable responsiveness and many other things which I can't explain right now.
+		I am also working on <a class='linklink' href="http://github.com/rishiosaur/IrIs">IrIs</a>, which is a virtual assistant that combines the extraordinary powers of <a class="linklink" href="https://google.com">Google</a> and Microsoft, and bringing them together using their APIs, to make an AI that is an APi.
 	</p>
 	<p>I am currently experimenting wih <a href="firebase.google.com">Firebase</a> or in emoji form: 🔥 + (⚾️ - ball).</p>
 	<p>
