--- a/index.html
+++ b/index.html
@@ -4,7 +4,5 @@ title: Rishi Kothari, Developer
 ---
 <div class="blurb">
 	<h1>$iam -rishi kothari.</h1>
-	<p>I'm best known as the guy who had really messy hair in grade 6. Read more about me <a href="about/" class="linklink">here</a><br>
-		Want to hire me? Look <a href="cv/" class="linklink">here</a>
-	</p>
+	<p>Alright, alright, I'll admit it. I'm not that good at introductions. If you're new to the internet, then you probably shouldn't be here. If you're not new (as I expect that you are), then you know what to do. The rectangle on top takes you to the different parts of my website, while the bottom shows links to external websites.</p>
 </div><!-- /.blurb -->
