--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
               ></div>
               <div
                 class="column__img"
-                style="background-image:url(img/D5D242BC-FF47-4E98-8253-0F4C04355AF5.jpg)"
+                style="background-image:url(img/IMG_3293.jpg)"
               ></div>
               <div
                 class="column__img"
@@ -272,7 +272,7 @@
               ></div>
               <div
                 class="column__img"
-                style="background-image:url(img/D5D242BC-FF47-4E98-8253-0F4C04355AF5.jpg)"
+                style="background-image:url(img/IMG_3293.jpg)"
               ></div>
               <div
                 class="column__img"
@@ -299,7 +299,7 @@
 
               <div
                 class="column__img"
-                style="background-image:url(img/D5D242BC-FF47-4E98-8253-0F4C04355AF5.jpg)"
+                style="background-image:url(img/IMG_3293.jpg)"
               ></div>
               <div
                 class="column__img"
@@ -350,11 +350,11 @@
               ></div>
               <div
                 class="column__img"
-                style="background-image:url(img/12D11EC7-2C5A-4BEF-98E2-175D0621C54C.JPG)"
+                style="background-image:url(img/IMG_3208.JPG)"
               ></div>
               <div
                 class="column__img"
-                style="background-image:url(img/D5D242BC-FF47-4E98-8253-0F4C04355AF5.jpg)"
+                style="background-image:url(img/IMG_3293.jpg)"
               ></div>
               <div
                 class="column__img"
