--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
               <div class="column__img" style="background-image:url(img/IMG_3293.jpg)"></div>
               <div class="column__img" style="background-image:url(img/IMG_3208.jpg)"></div>
               <div class="column__img" style="background-image:url(img/IMG_3359.jpg)"></div>
-              <div class="column__img" style="background-image:url(img/IMG_3342.jpg)"></div>
+              <div class="column__img" style="background-image:url(img/IMG_3342.JPG)"></div>
           </div>
           <div class="column">
               <div class="column__img" style="background-image:url(img/IMG_3248.jpg)"></div>
@@ -262,7 +262,7 @@
           
               <div class="column__img" style="background-image:url(img/IMG_3293.jpg)"></div>
               <div class="column__img" style="background-image:url(img/IMG_3208.jpg)"></div>
-              <div class="column__img" style="background-image:url(img/F8A8D6AD-D4C2-4190-A5B8-697BE561FE33.jpg)"></div>
+              <div class="column__img" style="background-image:url(img/F8A8D6AD-D4C2-4190-A5B8-697BE561FE33.JPG)"></div>
               <div class="column__img" style="background-image:url(img/logo.jpg)"></div>
               <div class="column__img" style="background-image:url(img/12D11EC7-2C5A-4BEF-98E2-175D0621C54C.JPG)"></div>
               <div class="column__img" style="background-image:url(img/IMG_3210.jpg)"></div>
@@ -278,7 +278,7 @@
               <div class="column__img" style="background-image:url(img/IMG_3208.JPG)"></div>
               <div class="column__img" style="background-image:url(img/IMG_3293.jpg)"></div>
               <div class="column__img" style="background-image:url(img/IMG_3208.jpg)"></div>
-              <div class="column__img" style="background-image:url(img/F8A8D6AD-D4C2-4190-A5B8-697BE561FE33.jpg)"></div>
+              <div class="column__img" style="background-image:url(img/F8A8D6AD-D4C2-4190-A5B8-697BE561FE33.JPG)"></div>
               <div class="column__img" style="background-image:url(img/IMG_3293.jpg)"></div>
           </div>
           </div>
