--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             style="background-image: url(img/74948897_240954253542589_1511662345399667905_n.jpg)"
           ></div>
           <div class="item__content">
-            <a class="item__content-back"><h2>back</h2></a>
+            <a class="item__content-back smallTitleLink">back</a>
             <h2 class="item__content-title">About</h2>
             <h3 class="item__content-subtitle">my philosophy.</h3>
             <div class="item__content-text">
@@ -90,7 +90,7 @@
             style="background-image: url(img/logos/iota.jpg)"
           ></div>
           <div class="item__content">
-            <a class="item__content-back"><h2>back</h2></a>
+            <a class="item__content-back smallTitleLink">back</a>
             <h2 class="item__content-title">iota.</h2>
             <h3 class="item__content-subtitle">A foundation for math.</h3>
             <div class="item__content-text">
@@ -121,7 +121,7 @@
             style="background-image: url(img/logos/omega.jpg)"
           ></div>
           <div class="item__content">
-            <a class="item__content-back"><h2>back</h2></a>
+            <a class="item__content-back smallTitleLink">back</a>
             <a class="titleLink" href="https://github.com/rishiosaur/omega"><h2 class="item__content-title">omega.</h2></a>
             <h3 class="item__content-subtitle">
               A secure, customizable assistant.
@@ -158,7 +158,7 @@
             style="background-image: url(img/logos/phi.jpeg)"
           ></div>
           <div class="item__content">
-            <a class="item__content-back"><h2>back</h2></a>
+            <a class="item__content-back smallTitleLink">back</a></a>
             <a href="https://github.com/rishiosaur/phi-design" class="titleLink"><h2 class="item__content-title">phi.</h2></a>
             <h3 class="item__content-subtitle">
               A mathematical programming language.
@@ -185,7 +185,7 @@
             style="background-image: url(img/logos/pragmathic.jpg)"
           ></div>
           <div class="item__content">
-            <a class="item__content-back"><h2>back</h2></a>
+            <a class="item__content-back smallTitleLink">back</a>
             <a class="titleLink" href="https://www.youtube.com/channel/UC0YVwqUzAjaWK2NphL1JuFA/featured"><h2 class="item__content-title">pragmathic.</h2></a>
             <h3 class="item__content-subtitle">
               An alternative to school 'math'
@@ -216,7 +216,7 @@
             style="background-image: url(img/logos/hoot.jpeg)"
           ></div>
           <div class="item__content">
-            <a class="item__content-back"><h2>back</h2></a>
+            <a class="item__content-back smallTitleLink">back</a>
             <a class="titleLink" href="https://github.com/rishiosaur/hoot-cli"><h2 class="item__content-title">hoot.</h2></a>
             <h3 class="item__content-subtitle">An assignment tracker.</h3>
             <div class="item__content-text">
