--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a href="https://www.notion.so/Resum-1f30f8797204413c8ef738558aa89f1b"
             >Resumé</a
           >
-          <a href="https://instagram.com/rishi.js">Instagram</a>
+          <a href="https://instagram.com/rishi.svg">Instagram</a>
           <a href="https://medium.com/@rishiosaur">Medium</a>
           <a href="https://github.com/rishiosaur/">Github</a>
         </div>
